# ChangeLog for media-fonts/dejavu
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.5 2005/05/03 12:02:40 usata Exp $

*dejavu-1.9 (03 May 2005)

  03 May 2005; Mamoru KOMACHI <usata@gentoo.org> dejavu-1.8.ebuild,
  +dejavu-1.9.ebuild:
  Version bumped. This closes bug #90559.

  24 Apr 2005; Diego Pettenò <flameeyes@gentoo.org> dejavu-1.8.ebuild:
  Marked ~amd64.

*dejavu-1.8 (22 Mar 2005)

  22 Mar 2005; Mamoru KOMACHI <usata@gentoo.org> dejavu-1.7.ebuild,
  +dejavu-1.8.ebuild:
  Version bumped.

*dejavu-1.7 (14 Feb 2005)

  14 Feb 2005; Mamoru KOMACHI <usata@gentoo.org> dejavu-1.4.ebuild,
  +dejavu-1.7.ebuild:
  Version bumped; bug #77569. Marked 1.4 stable.

*dejavu-1.4 (17 Oct 2004)

  17 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> +metadata.xml,
  +dejavu-1.4.ebuild:
  Initial import. Ebuild submitted by Vaclov Slavik
  <vaclav.slavik@matfyz.cz>, closing bug #55950.
