@@ -4,7 +4,9 @@ MD5 295674d4bed87f5a7c2796e032ed561e metadata.xml 158
 MD5 516263d988de1d908469688b14938d75 dejavu-1.7.ebuild 667
 MD5 8cc03a304930e2391d136ff84d011e80 dejavu-1.8.ebuild 674
 MD5 aab99d3c254a8a3cc296865fcbf93605 dejavu-1.9.ebuild 675
+MD5 aab99d3c254a8a3cc296865fcbf93605 dejavu-1.10.ebuild 675
 MD5 7f9d4fb0e877b043890681238c6ff089 files/digest-dejavu-1.4 66
 MD5 d35d8191602e96e498e304c4a5d9b171 files/digest-dejavu-1.7 66
 MD5 adbfe2b219243a3198dd3e8b0decf819 files/digest-dejavu-1.8 66
 MD5 25bffaa89d39ec2c3bc9266f0bd20509 files/digest-dejavu-1.9 66
+MD5 b8ebada311be8f36d3249401a37b9c0d files/digest-dejavu-1.10 67
