@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/Attic/dejavu-1.7.ebuild,v 1.2 2005/03/22 05:58:18 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/Attic/dejavu-1.10.ebuild,v 1.1 2005/05/29 03:20:12 usata Exp $
 
 inherit font
 
@@ -12,7 +12,7 @@ LICENSE="BitstreamVera"
 SRC_URI="mirror://sourceforge/dejavu/${MY_P}.tar.gz"
 
 SLOT="0"
-KEYWORDS="x86"
+KEYWORDS="~x86 ~amd64"
 IUSE=""
 
 # DEPEND and IUSE are defined in font.eclass
