@@ -1,0 +1,1 @@
+MD5 4a302a7358a3d7e04ba4d84578cdd479 dejavu-ttf-1.10.tar.gz 790718
