@@ -1,1 +1,0 @@
-MD5 dd53a611d383c91b93f58f7e8535bf3b dejavu-ttf-1.7.tar.gz 804818
