@@ -1,6 +1,12 @@
 # ChangeLog for media-fonts/dejavu
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.5 2005/05/03 12:02:40 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.6 2005/05/29 03:20:12 usata Exp $
+
+*dejavu-1.10 (28 May 2005)
+
+  28 May 2005; Mamoru KOMACHI <usata@gentoo.org> -dejavu-1.4.ebuild,
+  -dejavu-1.7.ebuild, dejavu-1.9.ebuild, +dejavu-1.10.ebuild:
+  Version bumped.
 
 *dejavu-1.9 (03 May 2005)
 
